@@ -47,6 +47,9 @@ require_relative 'fs/components/action_message'
 require_relative 'fs/components/action_errors'
 require_relative 'fs/components/action_exec'
 require_relative 'fs/components/action_exec_edit'
+require_relative 'fs/components/action_meta'
+require_relative 'fs/components/meta_input'
+require_relative 'fs/components/meta_output'
 require_relative 'fs/components/parameter'
 require_relative 'fs/components/resource_id'
 require_relative 'fs/components/help_file'
