@@ -11,6 +11,9 @@ output parameters.
     <dt><a href="output/help.html">output/</a></dt>
     <dd>Contains output parameters after the action was executed.</dd>
 
+    <dt><a href="meta/help.html">meta/</a></dt>
+    <dd>Contains input and output global metadata parameters.</dd>
+
     <dt>exec</dt>
     <dd>Write <code>1</code> to this file to execute the action.</dd>
 
