@@ -1,0 +1,10 @@
+<h2>Contents</h2>
+<p>
+This directory contains input and output global metadata parameters.
+</p>
+<dl>
+    <dt><a href="input/help.html">input/</a></dt>
+    <dd>Input parameters.</dd>
+    <dt><a href="output/help.html">output/</a></dt>
+    <dd>Output parameters.</dd>
+</dl>
