@@ -18,6 +18,9 @@ and subresources. Associated resources are represented by a directory.
     <dt><code>&lt;association_id&gt;</code></dt>
     <dd>To change the associated resource, write its id to this file.</dd>
 
+    <dt><a href="meta/help.html">meta/</a></dt>
+    <dd>Output metadata parameters.</dd>
+
     <dt>save</dt>
     <dd>Trigger the update action. The same as using <code>actions/update/exec</code>.</dd>
     
