@@ -9,6 +9,9 @@ output parameters.
 `output/`
   Contains output parameters after the action was executed.
 
+`meta/`
+  Contains input and output global metadata parameters.
+
 `exec`
   Write `1` to this file to execute the action.
 
