@@ -4,7 +4,7 @@ Every input parameter is represented by a file that can be written to. If a file
 is not changed, the parameter it represents will not be sent to the API -- it is
 possible to send only a subset of input parameters.
 
-<% @c.action_dir.action.input_params.each do |name, desc| %>
+<% @c.parameters.each do |name, desc| %>
 *<%= safe_print(name) %>*
   Label:       <%= desc[:label] %>  
   Required:    <%= desc[:required] ? 'yes' : 'no' %>  
