@@ -1,0 +1,3 @@
+CONTENTS
+--------
+This directory contains input and output global metadata parameters.
