@@ -13,6 +13,9 @@ actions and subresources. Associated resources are represented by a directory.
 `<association_id>`
   To change the associated resource, write its id to this file.
 
+`meta/`
+  Output metadata parameters.
+
 `save`
   Trigger the update action. The same as using `actions/update/exec`.
     
