@@ -1,5 +1,7 @@
 - Option `block` enables action blocking mode
 - Rename MetaDir and MetaFile to ProxyDir and ProxyFile
+- Add metadata input/output parameters
+- Fix typo in handling of boolean input parameters
 
 * Mon Apr 18 2016 - version 0.1.0
 - Initial release
